# 2025-8-opencv

./: .gitignore  build_and_run_csharp.sh  build_and_run_filter.sh  build_opencv_with_csharp.sh  opencv.csproj
install/include/opencv4/opencv2/: cvconfig.h  opencv_csharp_wrapper.h  opencv_modules.hpp  videoio.hpp
install/lib/: libopencv_calib3d.4.13.0.dylib  libopencv_core.4.13.0.dylib  libopencv_csharp_wrapper.4.13.0.dylib  libopencv_csharp_wrapper.413.dylib  libopencv_csharp_wrapper.dylib  libopencv_features2d.4.13.0.dylib  libopencv_flann.4.13.0.dylib  libopencv_highgui.4.13.0.dylib  libopencv_imgcodecs.4.13.0.dylib  libopencv_ml.4.13.0.dylib  libopencv_objdetect.4.13.0.dylib  libopencv_photo.4.13.0.dylib  libopencv_stitching.4.13.0.dylib  libopencv_video.4.13.0.dylib  libopencv_videoio.4.13.0.dylib
install/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
modules/core/include/opencv2/core/utils/: instrumentation.hpp
modules/csharp/: CMakeLists.txt  csharp.cpp  csharp.cs  csharp.csproj  csharp.hpp  exported_symbols.txt
modules/csharp_wrapper/: CMakeLists.txt  csharp_wrapper.csproj  exported_symbols.txt  opencv_csharp_wrapper.cpp  opencv_csharp_wrapper.h
modules/highgui/include/opencv2/: highgui.hpp
modules/highgui/src/: precomp.hpp  window.cpp  window_framebuffer.cpp  window_gtk.cpp
modules/imgcodecs/src/: grfmt_avif.cpp  grfmt_base.cpp  grfmt_base.hpp  grfmt_bmp.cpp  grfmt_exr.cpp  grfmt_gif.cpp  grfmt_hdr.cpp  grfmt_jpeg.cpp  grfmt_jpeg2000_openjpeg.cpp  grfmt_pam.cpp  grfmt_pfm.cpp  grfmt_png.cpp  grfmt_pxm.cpp  grfmt_sunras.cpp  grfmt_tiff.cpp  grfmt_webp.cpp  utils.cpp
modules/imgproc/include/opencv2/: imgproc.hpp
modules/imgproc/src/: filter.dispatch.cpp  filter.simd.hpp  filterengine.hpp
modules/videoio/src/: cap.cpp  cap_avfoundation.mm  cap_avfoundation_mac.mm  cap_ffmpeg_impl.hpp  cap_mfx_writer.cpp  cap_obsensor_liborbbec.cpp  cap_openni2.cpp  cap_v4l.cpp
test/: camera.py  csharp.cs  filter_test  filter_test.cpp  input_test.py  output_test.py  video_test.py  webcam_test  webcam_test.cpp
test/csharp/: csharp.csproj
